--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -13,6 +13,10 @@
     "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^6.13.1",
     "tailwindcss": "^2.0.2"
+  },
+  "devDependencies": {
+    "prettier": "2.2.1"
   }
 }
