--- a/.gitignore
+++ b/.gitignore
@@ -207,5 +207,5 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
-
+.DS_Store
 # End of https://www.toptal.com/developers/gitignore/api/node,intellij
