--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -8,15 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.7",
+    "@kiwicom/orbit-components": "^0.107.0",
     "autoprefixer": "^10.1.0",
+    "graphql": "^15.4.0",
     "next": "10.0.3",
     "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.13.1",
+    "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.7",
     "prettier": "2.2.1"
   }
 }
